<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.xwintop</groupId>
  <artifactId>xJavaFxTool</artifactId>
  <version>0.3.1</version>
  <packaging>jar</packaging>
  <name>xJavaFxTool</name>
  <description>基于JavaFx搭建的实用小工具集合</description>
  <organization>
    <name>xwintop</name>
    <url>https://gitee.com/xwintop</url>
  </organization>
  <url>https://gitee.com/xwintop/xJavaFxTool</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.test.skip>true</maven.test.skip>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <javafx.version>17.0.2</javafx.version>
  </properties>
  <repositories>
    <repository>
      <id>aliyunmaven</id>
      <url>https://maven.aliyun.com/repository/public</url>
    </repository>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.gitee.xwintop</groupId>
      <artifactId>xcore</artifactId>
      <version>0.0.7</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.22</version>
      <optional>true</optional>
      <scope>provided</scope>
    </dependency>

    <!-- https://mvnrepository.com/artifact/io.github.classgraph/classgraph -->
    <!-- https://github.com/classgraph/classgraph -->
    <dependency>
      <groupId>io.github.classgraph</groupId>
      <artifactId>classgraph</artifactId>
      <version>4.8.100</version>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <finalName>xJavaFxTool</finalName>
          <appendAssemblyId>false</appendAssemblyId>
          <encoding>utf-8</encoding>
          <archive>
            <manifest>
              <mainClass>com.xwintop.xJavaFxTool.XJavaFxToolMain</mainClass>
            </manifest>
          </archive>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <!--      <plugin>-->
      <!--        <groupId>org.openjfx</groupId>-->
      <!--        <artifactId>javafx-maven-plugin</artifactId>-->
      <!--        <version>0.0.8</version>-->
      <!--        <configuration>-->
      <!--          <mainClass>com.xwintop.xJavaFxTool.XJavaFxToolMain</mainClass>-->
      <!--        </configuration>-->
      <!--      </plugin>-->
      <plugin>
        <groupId>io.github.fvarrui</groupId>
        <artifactId>javapackager</artifactId>
        <version>1.6.5</version>
        <configuration>
          <bundleJre>true</bundleJre>
          <mainClass>com.xwintop.xJavaFxTool.XJavaFxToolMain</mainClass>
          <generateInstaller>true</generateInstaller>
          <platform>auto</platform>
          <createZipball>true</createZipball>
          <administratorRequired>true</administratorRequired>
          <winConfig>
            <!-- general properties -->
            <generateSetup>true</generateSetup>
            <generateMsi>false</generateMsi>
            <!-- setup generation properties -->
            <setupMode>installForAllUsers</setupMode>
            <createDesktopIconTask>true</createDesktopIconTask>
            <disableDirPage>false</disableDirPage>
            <disableFinishedPage>false</disableFinishedPage>
            <disableRunAfterInstall>false</disableRunAfterInstall>
            <disableWelcomePage>false</disableWelcomePage>
            <createDesktopIconTask>false</createDesktopIconTask>
            <setupLanguages>
              <chinesesimp>compiler:Default.isl</chinesesimp>
              <english>compiler:Languages\English.isl</english>
            </setupLanguages>
          </winConfig>
          <!-- 这行不能被格式化为多行，否则会出错-->
          <!--          <vmArgs>&#45;&#45;add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED &#45;&#45;add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED &#45;&#45;add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED &#45;&#45;add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED &#45;&#45;add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</vmArgs>-->
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
